# rl-cli-py

./: .bumpversion.cfg  LICENSE  README.md  dev-requirements.txt  katadata.txt  pyproject.toml  requirements.txt  upgrade.py  upgrade.sh
.github/workflows/: cli-integration.yml  pypi_publish.yml  test.yml
rl_cli/: __init__.py  main.py  net.py  runloop_client.py  utils.py
rl_cli/commands/: __init__.py  blueprint.py  devbox.py  invocation.py  object.py
tests/: conftest.py  test_cli.py  test_main.py  test_net.py
tests/commands/: __init__.py  test_blueprint.py  test_devbox.py  test_invocation.py  test_object.py
tests/integration/: test_blueprint_e2e.py  test_blueprint_e2e_robust.py  test_devbox_e2e.py  test_object_e2e.py
