[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rl_cli"
authors = [{name = "Runloop AI", email = "eng+cli@runloop.ai"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "runloop-api-client==0.57.0",
  "aiohttp>=3.9.0",
  "tabulate>=0.9.0",
  "zstandard>=0.22.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "flit",
  "pip-tools",
  "pytest",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[project.scripts]
rl = "rl_cli.main:main"
rl-cli = "rl_cli.main:main"

[project.urls]
Home = "https://www.runloop.ai"
Documentation = "https://docs.runloop.ai"
Source = "https://github.com/runloopai/rl-cli"
